# wtf-python

./: .gitignore  README.md  pyproject.toml
wtf_python/: ai.py  executor.py  formatter.py  main.py
